# DevLog_AI

./: .env.example  .gitignore  App.tsx  README-EN.md  README.md  drizzle.config.ts  index.html  metadata.json  package-lock.json  package.json  types.ts
backend/: main.py  pyproject.toml
backend/config/: settings.py
backend/llm/: __init__.py  base.py  deepseek.py  factory.py  gemini.py  openai.py
backend/routers/: agent.py  ai.py  embedding.py
backend/services/: ai_utils.py  blog_generator.py  daily_summary.py  database.py  embedding.py  skill_tree.py  tag_extraction.py
backend/services/agent/: __init__.py  brain_agent.py
components/: AskBrain.tsx  BlogGenerator.tsx  CalendarHeatmap.tsx  Dashboard.tsx  InputModal.tsx  KnowledgeGraph.tsx  Layout.tsx  MarkdownRenderer.tsx  Settings.tsx  SkillTree.tsx  Timeline.tsx
data/: devlog.db-shm  devlog.db-wal
embedding-service/: main.py  pyproject.toml
server/: index.ts
server/db/: index.ts  schema.ts
server/routes/: blogs.ts  brain.ts  conversations.ts  github.ts  graph.ts  logs.ts  processing.ts  skillTree.ts  summaries.ts
server/services/: aiProvider.ts  embeddingService.ts  geminiService.ts  githubService.ts  schedulerService.ts  skillTreeService.ts  tagService.ts  types.ts
server/utils/: localTagRules.ts
services/: apiService.ts  geminiService.ts  storageService.ts
