[project]
name = "devlog-embedding-service"
version = "0.1.0"
description = "BGE-M3 Embedding Service for DevLog AI Knowledge Graph"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "sentence-transformers>=3.0.0",
    "torch>=2.1.0",
    "numpy>=1.24.0,<2.3.0",
    "pydantic>=2.0.0",
    "transformers>=4.36.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
